--- a/templates/nginx-zammad.j2
+++ b/templates/nginx-zammad.j2
@@ -11,20 +11,24 @@ upstream zammad-websocket {
 }
 
 server {
-    listen 443 ssl;
+    listen {{ zammad_ssl_on | ternary("443 ssl", "80") }};
     # replace 'localhost' with your fqdn if you want to use zammad from remote
     server_name {{ ansible_fqdn }};
+{% if zammad_ssl_on %}
     ssl_certificate {{ zammad_ssl_dir }}/{{ zammad_ssl_cert }};
     ssl_certificate_key {{ zammad_ssl_dir }}/{{ zammad_ssl_cert_key }};
     ssl_protocols TLSv1.1 TLSv1.2;
     ssl_ciphers HIGH:!aNULL:!MD5;
+{% endif %}
 
     root /opt/zammad/public;
 
     access_log /var/log/nginx/zammad.access.log;
     error_log  /var/log/nginx/zammad.error.log;
 
+{% if zammad_ssl_on %}
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+{% endif %}
 
     client_max_body_size 50M;
 
